src/skins/admin/en/css/style.css
/* vim: set ts=2 sw=2 sts=2 et: */

/**
 * ____file_title____
 *
 * @author    Creative Development LLC <info@cdev.ru>
 * @copyright Copyright (c) 2011 Creative Development LLC <info@cdev.ru>. All rights reserved
 * @license   http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
 * @version   GIT: $Id$
 * @link      http://www.litecommerce.com/
 * @since     1.0.0
 */


/**
 * Clear styles
 */
 
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption, input, textarea
{
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
}

ol, ul
{
  list-style: none;
}

blockquote, q
{
  quotes:none;
}

blockquote:before,
blockquote:after,
q:before,
q:after 
{
  content: '';
  content: none;
}

:focus
{
  outline:0;
}

a
{
  text-decoration: none;
}


/**
 * Common styles
 */

body,
p,
div,
th,
td,
p,
input,
span,
textarea,
button
{
  color: #333;
  font-size: 12px;
  font-family: Helvetica, Arial, Sans-serif; 
}

body
{
	background-color: #fff;
}

a
{
  color: #154e9c;
}

h1,
h2,
h3
{
  font-family: "Trebuchet MS", Helvetica, Sans-serif;  
  color: #69a4c9;
  font-weight: normal;
}

h1
{
  font-size: 30px;
  line-height: 36px;
  margin-bottom: 20px;
  margin: 10px 0 20px;
}

h2
{
  font-size: 24px;
  margin: 18px 0;
}

h3
{
  font-size: 18px;
  margin: 12px 0;
}

/**
 * Form elements styles
 */

input[type=text],
input[type=password],
select,
textarea
{
  border-top: solid 1px #808080;
  border-left: solid 1px #808080;
  border-right: solid 1px #dfdfdf;
  border-bottom: solid 1px #dfdfdf;
  padding: 3px;
  background: #fff;
}

input[type=text],
input[type=password]
{
  height: 16px;
  line-height: 16px;
}

input[type=text]:focus,
input[type=password]:focus,
select:focus,
textarea:focus
{
  border: solid 1px #999;
}

select
{
  /* height: 24px;*/
  line-height: 24px;
}

hr
{
  color: #ddd;
  height: 1px;
}


/**
 * Layout
 */

html,
body
{
  min-width: 640px;
  height: 100%;
}

#page-container,
#content,
#sub-section,
#footer
{
  overflow: hidden;
}

#page-container {
  min-height: 100%;
  position: relative;
}

#page-container
{
  vertical-align: top;
  width: 100%;
}

#header {
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

#footer {
  position: absolute;
  bottom: 0;
  left: 0;
}

/* safari and opera need this */
#footer
{
  width:100%;
}

#content
{
  width: 100%;
}

#content #main
{
  margin: 0 25px 25px;
  min-width: 640px;
}

#sub-section
{
  float:right
}


/**
 * Header styles
 */

#header, #menu
{
  background: #0C263D url(../images/admin_header_bg.png) repeat-x left top;
  height: 76px;
}

#header .logo
{
  background: url(../images/logo.png) no-repeat 0 0;
  width: 180px;
  height: 76px;
  float: left;
}

#header .sw-version
{
  position: absolute;
  left: 90px;
  top: 12px;
}

#header .sw-version .current
{
  color: #7f90A0;
  margin-right: 10px;
  float: left;
  font-size: 12px;
}

#header .sw-version .upgrade-note
{
  color: #fff;
}

#header .sw-version .upgrade-note a {
  color: #82c4fa;
  text-decoration: underline;
}

/**
 * Footer styles
 */

#footer
{
  padding-top: 10px;
  border-top: solid 1px #e6e6e6;
  height: 60px;
}

#footer .left
{
  float: left;
  width: 50%;
  text-align: left;
}

#footer .right
{
  float: right;
  width: 50%;
  text-align: right;
}

/**
 * Common styles
 */

#content
{
  background: url(../images/content_top_bg.gif) repeat-x top left;
  padding: 15px 0 60px 0;
  border-top: 1px solid #dfe5e8;
  margin-top: 75px;
}

div.noscript
{
  width: 500px;
  color: #f00;
  font-weight: bold;
}

.admin-head,
.admin-title
{
  color: #69a4c9;
  font-family: "Trebuchet MS",Helvetica,Arial;
  font-size: 24px;
  font-weight: normal;
}

.admin-title
{
  color: #0D2335;
}

.main-menu-item-header
{
  color: #294F6C;
  text-decoration: none;
  font-size: 22px;
}

.highlight
{
  background-color: #eee;
}

.fixed-select
{
  width: 170px;
}

input.input-disabled {
  color: #8f8f8f;
}

/* Page tabs */

div.page-tabs
{
  height: 37px;
  border-bottom: 1px solid #cadce8;
  background: #f5f5f5;
  padding-top: 10px;
}

div.tab-content
{
  margin: 15px;
}

div.page-tabs ul
{
  padding:0;
  margin:0;
  list-style:none;
  margin-left: 10px;
}

div.page-tabs ul li
{
  float:left;
}

div.page-tabs ul li a
{
  -moz-border-radius: 10px 10px 0 0;
  -webkit-border-radius: 10px 10px 0 0;
  border-radius: 10px 10px 0 0;
  background: none repeat scroll 0 0 #ebf7ff;
  border-color: #cadce8 #cadce8;
  border-style: solid solid none;
  border-width: 1px 1px 0;
  display: block;
  float: left;
  margin-right: 10px;
  padding: 10px 15px;
  text-decoration: none;
  font-size: 14px;
  line-height: 16px;
}

div.page-tabs ul li.tab-current a
{
  background: #fff;
  color: #333;
  border-bottom: 1px solid #fff;
}

/* Data table */

table.data-table th,
table.data-table td
{
  padding: 5px 10px;
  white-space: nowrap;
  color: #333;
  vertical-align: top;
}

table.data-table th
{
  background-color: #e5ebef;
  text-align: left;
}

table.data-table td a
{
  text-decoration: underline;
} 
  
table.data-table th,
table.data-table th a,
table.data-table th span
{ 
  font-size: 16px;
  font-weight: normal;
  color: #154e9c;
}

table.data-table th a {
  text-decoration: none;
}

table.data-table th a:hover {
  text-decoration: underline;
}

table.data-table tr.highlight td
{
  background-color: #f2f2f2;
}

table.data-table tr.totals td
{
  font-weight: bold;
}

table.data-table td.separator
{
  border-top: solid 1px #E5EBEF;
  padding: 0;
}

table.data-table .extender
{
  width: 100%;
}

table.data-table td.extender input
{
  width: 90%;
}

table.data-table td.center
{
  text-align: center;
}

.dialog-box
{
  background-color: #fff;
}

body.popup
{ 
  margin: 5px;
  background: #fff;
}

.star
{
  color: #ff0000;
}

div.clear
{
  clear: both;
  height: 0px;
}

/* Messages */

.error-message
{
  color: #ff0000;
  font-weight: bold;
}

.validate-error-message
{
  color: #ff0000;
}

.success-message
{
  color: green;
  font-weight: bold;
}

/* Plain table */

table.plain-table
{
  background-color: #000;
}

table.plain-table th
{
  background-color: #e5ebef;
}

table.plain-table td
{
  background-color: #fff;
}

.right-panel
{
  text-align: right;
  padding: 5px 0px 10px 0px;
}

input.orderby
{
  width: 4em;
  text-align: right;
}

input.price,
input.inventory
{
  width: 50px;
  text-align: right;
}

/* List-based form */

ul.form
{
  margin: 0px;
  padding: 0px;
  list-style: none;
}

ul.form li
{
  margin: 0px;
  padding: 5px 0px;
  list-style: none;
}

ul.form label
{
  display: block;
  font-style: normal;
  margin-right: 5px;
}

ul.form li.required label
{
  background: transparent url(../images/red_star.png) no-repeat right 5px;
}

ul.form li .note
{
  display: block;
  font-size: 10px;
}

/* Settings pages */

table.settings-table tr td.setting-name
{
  padding: 7px 0 7px 10px;
  color: #456583;
}

table.settings-table tr td h2
{
  margin: 30px 0 10px 0;
}

/* Buttons */

div.buttons
{
  margin-top: 10px;
}

hr.tiny
{
  height: 0px;
  border: 0px none;
  border-top: 1px solid #cdcdcd;
}

input[type="submit"],
input[type="button"],
input[type="reset"],
button 
{
    -moz-border-radius: 19px;
    -webkit-border-radius: 19px;
    border-radius: 19px;
    background: url(../images/button_bg_light.png) repeat-x center top #eff8fe;
    border: 1px solid #cadce8;
    color: #2c5fa6;
    cursor: pointer;
    font-size: 12px;
    margin: 7px 7px 7px 0;
    padding: 3px 12px;
    font-family: "Trebuchet MS", Helvetica, Arial;
}

button span
{
    color: #0e55a6;
    font-family: "Trebuchet MS",Helvetica,sans-serif;
    font-size: 15px;
    vertical-align: middle;
}

button:hover
{
  border-color: #b1c9e0;
}

button.main-button,
input.main-button
{
  padding: 6px 15px;
}

button.main-button span,
input.main-button
{
  font-size: 16px;
  line-height: 16px;
}

button.invert
{
  background: url(../images/button_bg_blue.png) repeat 0 0;
  border-color: transparent;
}

button.invert span
{
  color: #fff;
}

button.invert:hover
{
  background-color: transparent;
  background-image: url(../images/button_bg_blue_hover.png);
}

/**
 * jQueryUI-based wait box 
 */
.wait-box .box
{
  background: transparent url(../images/progress.gif) repeat-x left top;
  width: 100%;
  height: 11px;
}

.wait-box .ui-dialog-titlebar {
  display: none;
}

* html button
{
  behavior: expression(
    this.onmouseover = new Function("this.className += ' hover'"),
    this.onmouseout = new Function("this.className = this.className.replace(' hover','')"),
    this.style.behavior = null
  );
}

/* jQueryUI-based wait box */

.wait-box .box
{
  background: transparent url(../images/progress.gif) repeat-x left top;
  width: 100%;
  height: 11px;
}

.wait-box .ui-dialog-titlebar {
  display: none;
}

/* Advertise block */

.adv-block
{
  border: 7px solid #dee8ee;
  margin-bottom: 30px;
}

.adv-block .internal
{
  border: 1px solid #8fa7b9;
  padding: 0px 0px 15px 25px;
  position: relative;
}

.adv-block a.close
{
  position: absolute;
  display: block;
  top: 5px;
  right: 5px;
  outline: 0;
}

.adv-block a.close,
.adv-block a.close img
{
  background: transparent url(../images/remove.png) no-repeat left top;
  padding: 0;
  margin: 0;
  border: 0;
  width: 13px;
  height: 13px;
}

.adv-block a
{
  color: #043fa0;
  text-decoration: underline;
}

.adv-block td
{
  padding: 0px;
  text-align: left;
  color: #1e1e1e;
  vertical-align: top;
}

.adv-block td.qualiteam
{
  text-align: right;
  padding-top: 22px;
  padding-right: 25px;
  padding-left: 60px;
}

.adv-block h2
{
  font-size: 34px;
  color: #082032;
  margin: 0px;
  padding: 0px;
  padding-top: 22px;
  padding-bottom: 18px;
  font-weight: normal;
}

.adv-block span
{
  line-height: 19px;
}

.adv-block p,
.adv-block p a
{
  font-size: 18px;
}

.adv-block p
{
  color: #3b3b3b;
  margin: 0px;
  padding: 0px;
  padding-top: 18px;
}

.adv-block h2.custom
{
  background: transparent url(../images/adv_icon_custom.png) no-repeat left 6px;
  padding-left: 60px;
}

.adv-block h2.support
{
  background: transparent url(../images/adv_icon_support.png) no-repeat left 22px;
  padding-left: 50px; 
}

.adv-block h2.hosting
{
  background: transparent url(../images/adv_icon_hosting.png) no-repeat left 20px;
  padding-left: 55px;
}

.table tr td
{
  padding-left: 25px;
  padding-bottom: 10px;
  font-size: 12px;
}

.table-label
{
  min-width: 150px;
  white-space: nowrap;
  vertical-align: top;
}

/* Profile form */

#referer,
#added,
#last-login,
#language,
#orders-count
{
  font-weight: normal;
}

.profile-form input,
.profile-form select
{
  width: 300px;
}

.model-form-buttons
{
  padding-top: 25px;
}

.profile-form .button
{
  padding-left: 240px;
}

/* Navigation path */

.navigation-path,
.navigation-path:link,
.navigation-path:visited,
.navigation-path:active,
.navigation-path:hover
{
  color: #294f6c;
  text-decoration: none;
}

.navigation-path:hover
{
  color: #082032;
}

